added pics to splash page

--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,1 +1,7 @@
-<h1>You Did It!!!</h1>
+<h1>Check Out These Cool Pics!!!!!!</h1>
+
+<img src='http://i.imgur.com/E2tvCBE.jpg'>
+
+<img src="http://i.imgur.com/Rh9uF99.jpg">
+
+<img src="http://i.imgur.com/X3xJnb1.jpg">
